# SmartGL

./: .gitignore  CMakeLists.txt  README.md  SmartGL.hpp  demo.cpp  install_dependencies.bat  install_dependencies.sh
Buffer/: Buffer.hpp  DynamicBuffer.hpp  DynamicElementBuffer.hpp  DynamicVertexBuffer.hpp  ShaderStorageBuffer.hpp  StaticBuffer.hpp  StaticElementBuffer.hpp  StaticVertexBuffer.hpp
Framebuffer/: Framebuffer.hpp  RenderTarget.hpp  RenderTexture.hpp  Renderbuffer.hpp
Model/: Model.hpp  ModelConverter.hpp  ModelConverter_types.hpp  ModelStructs.hpp  Model_types.hpp  PhysicsModel.hpp  PhysicsModel_types.hpp  Scene.hpp  ShadowRenderer.hpp  VertexStructRepresentation.hpp
Physics/: RigidBodyPhysics.hpp
Program/: Program.hpp  ShaderLoader.hpp
Texture/: Image.hpp  Texture.hpp  Texture2D.hpp  Texture3D.hpp  TextureConverter.hpp  TextureCubeMap.hpp
Uniform/: ProgramUniforms.hpp  UniformBufferTable.hpp  UniformTable.hpp
VertexArray/: VertexArray.hpp
demos/: CMakeLists.txt
demos/ascii_demo/: CMakeLists.txt  FontConverter.hpp  FontNormalizer.hpp  ascii_demo.cpp  instructions.txt
demos/basic_demo/: CMakeLists.txt  basic_demo.cpp  instructions.txt
demos/physics_demo/: CMakeLists.txt  instructions.txt  physics_demo.cpp
demos/platformer_demo/: Background.hpp  CMakeLists.txt  ProceduralMap.hpp  instructions.txt  platformer_demo.cpp
include/: SmartGL.hpp
include/Buffer/: Buffer.hpp  (+9 more)
src/: SmartGL-convert-cubemap.cpp  SmartGL-convert-model.cpp
util/: BinaryFile.hpp  CubeMapConvolution.hpp  Exception.hpp  GL-math.hpp  Timer.hpp  enums.hpp  util.hpp
(+94 files in other folders)
